--- a/src/app/search-bar/search-box/search-box.component.css
+++ b/src/app/search-bar/search-box/search-box.component.css
@@ -53,3 +53,11 @@ input:focus {
 :host ::ng-deep .highlight{
     background-color: #F2E366;
   }
+
+  @media (max-width:420px){
+    .box-outer{
+        margin: auto;
+        width: 80%;
+        text-align: center;
+    }
+  }
