--- a/src/app/content-bar/content-box/content-box.component.css
+++ b/src/app/content-bar/content-box/content-box.component.css
@@ -47,3 +47,18 @@
 .error-box{
     text-align: center;
 }
+@media (max-width:420px){
+    .outer-box{
+        margin:auto;
+        width: 100%;
+    }
+    .heading{
+        margin: 0rem;
+        padding: 0rem;
+        margin-top: 0rem;
+        margin-bottom: 2rem;
+        margin-left: 0px;
+        font-weight: bold;
+        font-size: 1rem;
+    }
+  }
