--- a/src/app/content-bar/content-detail/content-detail.component.css
+++ b/src/app/content-bar/content-detail/content-detail.component.css
@@ -3,3 +3,9 @@
     width: 40%;
     text-align: center;
 }
+@media (max-width:420px){
+    .outer-box{
+        margin:auto;
+        width: 90%;
+    }
+  }
