--- a/src/app/search-bar/search-box/search-box.component.css
+++ b/src/app/search-bar/search-box/search-box.component.css
@@ -34,7 +34,6 @@ input:focus {
   }
 .search-list{
     width: 100%;
-    padding-left: 1rem;
     text-align: left;
     border-radius: 10px;
     border: grey 0.5px solid;
@@ -42,7 +41,7 @@ input:focus {
 .search-item{
     margin: 0.5rem;
     margin-bottom: 1rem;
-    margin-left: 0px;
+    margin-left: 1rem;
 }
 .search-btn{
     padding: 0px;
